added moment() to display current date and time. Current time now displays upon hitting Search

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,11 @@
     text-align: right;
 }
 
+#currentDate {
+    font-weight: bolder;
+    text-align: center;
+}
+
 .title-background {
     background-color:  rgba(56, 255, 245, 0.788);
     
