--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,9 @@ footer{
     font-size: small;
     margin-top: 30px;
 }
-
+li{
+    list-style: none;
+}
 #background-image{
     background-image: url(https://images.unsplash.com/photo-1617541224485-ca362e048814?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
     background-repeat: no-repeat;
@@ -18,6 +20,7 @@ footer{
 }
 
 #searchButton {
+    margin-top:5px;
     align-self: center;
     width: 100px;
 }
@@ -46,7 +49,29 @@ footer{
 
 }
 
+#slider {
+            
+}
+#Actual {
+    /* min-width: 100%; */
+    padding: 20px;
+    margin-right:0px!important;
+}
+.slideup, .slidedown {
+    /* min-width:fit-content; */
+    max-height: 0;            
+    overflow-y: hidden;
+    -webkit-transition: max-height 0.5s ease-in-out;
+    -moz-transition: max-height 0.5s ease-in-out;
+    -o-transition: max-height 0.5s ease-in-out;
+    transition: max-height 0.5s ease-in-out;
+}
+.slidedown {            
+    max-height:1500px ;                    
+}   
+
 #searchColumn{
+    height: 100vh;
     display: flex;
     flex-direction: column;
     background-image: url('https://images.unsplash.com/photo-1558486012-817176f84c6d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=619&q=80');
